# JFTTCompiler

./: .gitignore  CMakeLists.txt  README.md  TODO.md
resources/: 0-div-mod.imp  1-numbers2.imp  2-fib.imp  3-fib-factorial.imp  4-factorial.imp  5-tab.imp  6-mod-mult.imp  7-loopiii.imp  8-for.imp  9-sort2.imp  example1.imp  example10.imp  example11.imp  example12.imp  example13.imp  example14.imp  example15.imp  example16.imp  example2.imp  example3.imp  example4.imp  example5.imp  example6.imp  example7.imp  example8.imp  example9.imp  output0000.mr  output1.mr  output10.mr  output11.mr  output13.mr  output2.mr  output3.mr  output4.mr  output5.mr  output6.mr  output7.mr  output8.mr  output9.mr  program0.imp  (+1 more)
src/backend/: Assembly.cpp  Assembly.hpp  AssemblyPrinter.cpp  AssemblyPrinter.hpp  CMakeLists.txt  InstructionSelector.cpp  InstructionSelector.hpp
src/compiler/: CMakeLists.txt  main.cpp
src/frontend/: CMakeLists.txt  frontend.c  frontend.h  parser.y  tokenize.l
src/frontend/ast/: assignment.c  assignment.h  ast.h  branch.c  branch.h  condition.c  condition.h  expression.c  expression.h  io.c  io.h  loops.c  loops.h  node.c  node.h  operand.c  operand.h  program.c  program.h  types.h
src/frontend/utility/: ASTOptimizer.cpp  ASTOptimizer.hpp  Converter.cpp  Converter.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp
src/ir/: CMakeLists.txt  Condition.cpp  Condition.hpp  Label.cpp  Label.hpp  Operand.cpp  Operand.hpp  Record.hpp  SymbolTable.cpp  SymbolTable.hpp  ThreeAddressCode.hpp
src/ir/blocks/: BaseBlock.cpp  BaseBlock.hpp  ConditionBlock.cpp  ConditionBlock.hpp  ControlFlowBlock.cpp  ControlFlowBlock.hpp  DivisionBlock.cpp  DivisionBlock.hpp  ForLoopBlock.cpp  ForLoopBlock.hpp  MultiplicationBlock.cpp  MultiplicationBlock.hpp  RemainderBlock.cpp  RemainderBlock.hpp  ThreeAddressCodeBlock.cpp  ThreeAddressCodeBlock.hpp  WhileLoopBlock.cpp  WhileLoopBlock.hpp
test/: CMakeLists.txt
test/backend/: ISAMatch.cpp  TACSimplify.cpp
test/frontend/: ASTOptimizerTest.cpp  ConverterTest.cpp  LexerTest.cpp  ParserTest.cpp  SemanticAnalysisTest.cpp
test/ir/: SymbolTableTest.cpp  TACFlatten.cpp
tools/: autoTest.py  nGenCompare.py
